--- a/PortFolio/portfolio.css
+++ b/PortFolio/portfolio.css
@@ -21,7 +21,6 @@ a{
 
 .col-20
 {
-    border: 2px solid black;
     background: #040b14;
     width: 20%;
     color: white;
@@ -59,6 +58,13 @@ a{
         padding: 20px;
         align-items: center;
     }
+
+    #email
+    {
+        text-transform: lowercase;
+        font-weight: 500;
+    }
+
     .changes
     {
         /* padding-left: 40px; */
@@ -381,4 +387,29 @@ background-color: skyblue;
 .Bcci-logo
 {
     object-fit: cover;
+}
+
+#contact
+{
+    background-color: black;
+    color: whitesmoke;
+    margin: 50px 0px 0px;
+}
+.contact-info
+{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+#contact h3
+{
+    padding: 20px 0px;
+    font-size: 32px;
+}
+.contact-info h4
+{
+    font-size: 32px;
 }
