--- a/BrowseInfo/Custom.css
+++ b/BrowseInfo/Custom.css
@@ -14,6 +14,19 @@
     align-items: center;
     flex-wrap: wrap;
 }
+
+.lists a
+{
+    color: black;
+    text-decoration: none;
+}
+
+#About-us a
+{
+    text-decoration: none;
+    color: white;
+}
+
 li img
 {
     width: 270px;
@@ -35,8 +48,8 @@ position: relative;
 #About-us
 {
 position: absolute;
-top: 50px;
-left: 90px;
+/* top: 50px; */
+/* left: 90px; */
 display: none;
 }
 nav
@@ -72,11 +85,15 @@ z-index: 2;
 {
 padding: 5px 0px;        
 }
+
+.Services-list a
+{
+    color: white;
+}
+
 .Services-list
 {
 position: absolute;
-top: 50px;
-left: 140px;
 display: none;
 
 }
@@ -189,7 +206,7 @@ content: "\f2b0";
             opacity: 0.5;
         }
     
-     .header5card1 p,a
+     .header5card1 p, .header5card1 a
      {
         color: white;
         text-decoration: none;
