--- a/BCCI/style.css
+++ b/BCCI/style.css
@@ -306,6 +306,7 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 font-family: sans-serif;
+overflow-x: scroll;
 }
 
 .page2titles
@@ -374,8 +375,9 @@ margin-right: 20px;
 padding: 30px;
 font-family: sans-serif;
 display: flex;
-justify-content: space-between;
-column-gap: 30px;
+justify-content: space-around;
+gap: 30px;
+flex-wrap: wrap;
 }
 
 .top-text
@@ -386,9 +388,7 @@ border: 1px solid black;
 
 .card1imgtext
 {
-width: 80px;
-height: 80px;
-display: flex;
+    display: flex;
 margin: 20px 5px;
 align-items: center;
 column-gap: 10px;
@@ -400,8 +400,8 @@ text-transform: uppercase;
 
 .card1imgtext img
 {
-width: 100%;
-height: 100%;
+width: 80px;
+height: 80px;
 }
 
 #vs
@@ -415,6 +415,7 @@ height: 38px;
 border: 1px solid black;
 background: #262d41;
 position: relative;
+/* margin-left: 100px; */
 }
 
 .date
@@ -825,6 +826,8 @@ width: 30%;
 {
 width: 70%;
 display: flex;
+flex-wrap: wrap;
+row-gap: 20px;
 }
 
 .content-wrapper
@@ -1020,7 +1023,7 @@ color: #fff;
 font-size: 18px;
 padding: 6px 36px;
 border: none;
-margin-left: 120px;
+/* margin-left: 120px; */
 margin-top: 20px;
 }
 
