--- a/Netflix/Responsive.css
+++ b/Netflix/Responsive.css
@@ -991,6 +991,9 @@
 @media (max-width: 576px)
     {
 
+      .fa-x:before {
+        font-size: 16px;
+    }
        .text
       {
         width: 100%;
