--- a/Burgir-web/Burger.css
+++ b/Burgir-web/Burger.css
@@ -447,7 +447,8 @@
 
 #page4p1
 {
-    font-size: 25px;
+    text-align: center;
+font-size: 25px;
 text-transform: uppercase;
 color: #3d3d3d;
 font-weight: 700;
