--- a/Youtube/responsive.css
+++ b/Youtube/responsive.css
@@ -1,9 +1,31 @@
 @media (max-width: 1400px)
- { }
+ {
+
+    
+.all_cards video
+{
+width: 400px;
+}
+
+  }
 @media (max-width: 1200px)
- { }
+ {     
+    
+.all_cards video
+{
+width: 340px;
+}
+
+ }
 @media (max-width: 992px)
- {  }
+ {
+   
+.all_cards video
+{
+width: 270px;
+}
+
+   }
 
 
 @media (max-width: 768px)
@@ -27,6 +49,8 @@
 {
     font-size: 15px;
 }
+
+
 
 #card_wrapper
 {
