--- a/BrowseInfo/Custom.css
+++ b/BrowseInfo/Custom.css
@@ -459,6 +459,7 @@ content: "\f2b0";
         footer
         {
             background: #051a28;
+            width: 100%;
         }
         .wrapper
         {
